--- a/book-rating/package.json
+++ b/book-rating/package.json
@@ -21,6 +21,16 @@
     "@angular/platform-browser": "4.3.4",
     "@angular/platform-browser-dynamic": "4.3.4",
     "@angular/router": "4.3.4",
+    "@progress/kendo-angular-dateinputs": "^1.0.6",
+    "@progress/kendo-angular-dropdowns": "^1.1.3",
+    "@progress/kendo-angular-excel-export": "^1.0.3",
+    "@progress/kendo-angular-grid": "^1.3.3",
+    "@progress/kendo-angular-inputs": "^1.1.0",
+    "@progress/kendo-angular-intl": "^1.2.2",
+    "@progress/kendo-angular-l10n": "^1.0.3",
+    "@progress/kendo-data-query": "^1.0.6",
+    "@progress/kendo-drawing": "^1.2.0",
+    "@progress/kendo-theme-default": "^2.40.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.1",
